# WebP-GUI-Tool

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
app/: main.py
app/components/dialogs/: settings_dialog.py
app/components/widgets/: file_item.py
